--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,6 @@ services:
     plan: starter
     buildCommand: pip install -r requirements.txt
     startCommand: bash startup.sh
+    envVars: 
+      - key: PYTHONPATH
+      value: app
